fix css distortion in grants sidebar

--- a/app/assets/v2/css/sidebar_search.css
+++ b/app/assets/v2/css/sidebar_search.css
@@ -1,5 +1,6 @@
 .sidebar_search {
   padding: 20px 20px 10px 40px;
+  width: 100%;
 }
 
 .subheading {
@@ -106,6 +107,7 @@
     margin-left: 10px;
     margin-right: 10px;
     padding: 20px 20px 10px;
+    width: 100%;
   }
 }
 
